--- a/site/public/csgo-brasil.css
+++ b/site/public/csgo-brasil.css
@@ -133,7 +133,7 @@
     box-shadow: black 0 -1px 7px 2px,  black 0 -1px 9px, black 0 2px 12px;
     animation: slide 30s infinite;
     animation-duration: 30s;
-    margin-top: 5%;
+    margin-top: 2%;
     border-radius: 15px;
   }
   
@@ -175,6 +175,53 @@
     }
     
   }
+  .texto2{
+text-align: justify;
+display: flex;
+width: 80%;
+font-size: 25px;
+margin-left: 185px;
+font-family: sans-serif;
+color: white;
+}
   
+.noticia1 {
+  background-color: #DAA520;
+}
+.teste2{
+  z-index: 100;
+  color: white;
+  padding-top: 150px;
+  padding-left: 150px;
+  font-size: 70px;
+  font-family: sans-serif, Bold ;
+  
+}
+  .subteste1 {
+    z-index: 100;
+    color: white;
+    padding-top: 8px;
+    padding-left: 150px;
+    font-size: 20px;
+    font-family: sans-serif; 
+    background-color: #DAA520;
+  }
 
+.gaules {
+    justify-content: center;
+     align-items: center;
+     display: flex;
+     border-radius: 15px;
+}
+.noticia2 {
+  background-color: #DAA520;
+}
+.texto3{
+  z-index: 100;
+  color: white;
+  padding-top: 10px;
+  padding-left: 150px;
+  font-size: 30px;
+  font-family: sans-serif, Bold ;
   
+}
